assets/css/app.css
/* ... */
@media (min-width:400px) {

.mp3title {
  font-size: 18px !important;
}

.mp3numb {
  font-size: 18px !important;
}
}

@media (max-width:767px) {

.navbar-header {
background: transparent url(/wp-content/themes/sidbernstein/assets/img/logo.jpg) 0px 0px scroll no-repeat;
}

body.single .images, body.single-product .images {
padding-bottom: 0;
}

.nav > li > a {
font-size: 30px;
}

a.button.keepreading {
  margin-top:10px;
  margin-bottom:10px;
}

.memorybutton {
font-size: 16px;
}


.bio.row {
margin-top: 0px;
}

.vc_custom_1410467072371 {
margin-top: 0px;
margin-bottom: 0px;
padding-top: 0px;
padding-right: 0px;
padding-bottom: 0px;
padding-left: 0px;
}

.bioexcerpt p {
font-size: 24px;
padding-bottom: 2%;
}


body.home h1 {
font-size: 32px;
margin-top:20%;
}

body.home .vc_col-sm-6.col-xs-6.wpb_column.vc_column_container {
text-align: center;
}

}

/* Small devices (tablets, 768px and up) */
@media (min-width: 768px) {

.col-sm-offset-3 {
  margin-left: 21% !important;
}

.masonblock {
  width: 50%;
  padding: 5px 1% !important;
}

.woocat-info {
  padding-top: 0px;
}

.featured {
  margin-right: -13% !important;
}

.storebut {
  text-align: left !important;
  vertical-align: bottom !important;
}

.homealbumtitle > a > h1 {
  text-align: left !important;
}

.viewmas > h1 {
  text-align: left !important;
}

.catblock {
  min-height: 185px;
}

.catsquare {
  min-height: 223px;
}

.singlestory {
}

.singlehead {
  margin-left: -15px;
}

.mp3title {
  font-size: 16px !important;
}

.mp3numb {
  font-size: 16px !important;
}

.vc_custom_1410467072371 {
margin-top: 0px;
margin-bottom: 0px;
padding-top: 0px;
padding-right: 50px;
padding-bottom: 0px;
padding-left: 50px;
}

div#frm_form_8_container {
  width: 30%;
}

.main {
  float: none;
}

.container-fluid {
  padding-left: 175px;
}

.nopad {
  padding: 0px !important;
}

.sidenav {
   padding: 0px;
   position:fixed;
   width: 10% !important;
   height:100%;
}

.navbar {
   min-height: 0px;
}

.navbar-default {
   height: 100%;
   width: 200px;
}

/*.nav > li > a {
    color: #f8f8f8;
    padding: 0px;
}*/

.sidenavwrapper {
  padding: inherit;
}

.navbar-collapse{
  min-width: 175px !important;
  z-index: 1;
  margin: 0px;
}

.navlogo {
   display: inherit;
   z-index: 100;
   width: 146px;
   height: 56px;
   margin: 20px auto;
}

.navbar-collapse.collapse {
    display: block !important;
    min-height: 100% !important;
    overflow: visible !important;
    padding-bottom: 0;
}

.navbar-default .navbar-nav>li>a {
font-size: 14px;
}

.navbar-brand {

}

/*.mainarea {
   float: left;
   width: 90% !important;
   padding: 0 0 0 15px !important;
}*/

.memoryhead {
  padding: 5% 10%;
}

.memoryhead .homeexcerpt {
  font-size: 24px !important;
}

.memorybutton {
  font-size: 22px;
}

.memorybutton > a:hover {
  background-color: #7DCECF !important;
  color:#FFF !important;
}

.button > a:hover {
  color: #FFF;
  background-color: #7dcecf;
}

.fullbio {
  font-family: "garamond-premier-pro";
  font-size: 16px;
}

.homeheader {
  font-size: 42px;
  line-height: 42px;
  padding: 30px 0 0 0;
}

.homeexcerpt {
  font-size: 20px;
}

.bioexcerpt {
  font-size: 28px;
  line-height: 42px;
}

.homealbumtitle {
  text-align: left;
  font-size: 42px;
}

.homealbumcover {
  height: 100% !important;
}

.homemp3container {
  font-family: "garamond-premier-pro";
  font-size: 12px;
  margin: 0 0 0 0;
}

.secondalbumimage {
  margin: inherit;
}

.mp3play > a:hover {
  color: rgba(225, 238, 47, 0.9) !important;
}

.mp3play > a {
  color: #FFF !important;
  font-family: serif!important;
  display: block;
  width: 100%;
  padding: 6.25%;
  height: 0px;
}

.masonthumb {

}

.masoninfoblock {

}


.masoninfoblock > a:hover {
  color: #42A39F;
}



.masontitle {

}

.masonlocation{

}

.masondate{

}

.masoncaption {

}

.masonlink {

}

.masonlink > a:hover {
  color: #726E09 !important;
}

.modal-dialog {
  margin: 5% auto!important;
  text-align: left !important;
}

.videomodal {

}

.photomodal {
  margin: 20px 0 0;
}

.modalcopy {

}

.memorymodal {

}

.js-wpt-field-items {
    margin: auto;
    width: 70%;
}

.wpt-form-file {
display: inline!important;
}

.sidvidcopy {
  margin: 20px 5% 0;
  -webkit-column-count: 2;
  -moz-column-count: 2;
  column-count: 2;
}

.sidvidbanner {
  padding: 50px 0px 30px;
}

.wpb_video_wrapper {
  width: 70%;
  height: auto;
  margin: auto;
}

/*.woocommerce ul.products li.product {
  margin: 0px 4% 2.992em;

}*/

.credits {
  padding: 0 0 10px 30px !important;
  width: 70% !important;
}

.credits > a {

}

.jsmasonry, .content-container {
  margin: 30px 15px 30px 30px !important;
}

footer {
  bottom: 0px;
  z-index: 110;
}

div#frm_form_8_container {
  width: 60%;
}

.sidhomealbum {
  margin: 0 -15px 0 0;
}

.mp3title {
  font-size: 9px !important;
}

.mp3numb {
  font-size: 9px !important;
}

.fa {
  line-height: 0.5 !important;
}

.mp3play {
  line-height: 0.5 !important;
}

.prod-title {
  text-align: left !important;
}

.profo {
  text-align: left !important;
}

.fopro {
  text-align: left !important;
}

.quantity.buttons_added {
/* text-align: left; */
margin-left: 0;
}

.product-info {
  margin-left: 25px;
}

.singlestory > div {
  padding-top: 20px;
  column-count: 2;
  -moz-column-count: 2;
  -webkit-column-count: 2;
}

}

/* Medium devices (desktops, 992px and up) */
@media (min-width: 992px) {

.masonblock {
  width: 33.333333333333%;
 }

.catblock {
  min-height: 165px;
}

.catsquare {
  min-height: 285px;
}

.woocat-info {
min-height: 250px;
}

.memory {
  padding: 8% 0;
}
.memorybutton {
  font-size: 24px;
}

.memoryhead {
  padding: 5% 28% 5%;
 }

 div#frm_form_8_container {
  width: 60%;
}

.mp3title {
  font-size: 15px !important;
}

.mp3numb {
  font-size: 18px !important;
}

.product-info {
  padding-left: 30px;
  margin-left: 0px;
}
}
/* ... */

